--- a/ui/component/package.json
+++ b/ui/component/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@clutchd/component",
   "version": "2.0.5",
+  "description": "A primitive component intended to be used as a foundation for all other ui components.",
   "keywords": [
     "clutchd",
     "component",
@@ -33,6 +34,7 @@
     "@clutchd/slot": "1.0.5"
   },
   "devDependencies": {
+    "@clutchd/bundlejs": "0.1.3",
     "@clutchd/jest": "1.0.2",
     "@clutchd/tsconfig": "1.2.0",
     "@testing-library/react": "14.0.0",
