--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -20,7 +20,10 @@
     "@clutchd/jest": "1.0.2",
     "@clutchd/tsconfig": "1.2.0",
     "@types/node": "20.3.2",
+    "autoprefixer": "10.4.14",
     "jest": "29.5.0",
+    "postcss": "8.4.24",
+    "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
 }
