--- a/ui/link/package.json
+++ b/ui/link/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@clutchd/link",
   "version": "1.1.8",
+  "description": "A next/link powered component with additional features and default styling.",
   "keywords": [
     "clutchd",
     "link",
@@ -36,6 +37,8 @@
   "devDependencies": {
     "@clutchd/jest": "1.0.2",
     "@clutchd/tsconfig": "1.2.0",
+    "@clutchd/twx": "1.1.3",
+    "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
@@ -48,7 +51,13 @@
     "typescript": "5.1.3"
   },
   "peerDependencies": {
+    "@clutchd/twx": "1.1.3",
     "next": "^13.4",
     "react": "^18.2"
+  },
+  "peerDependenciesMeta": {
+    "@clutchd/twx": {
+      "optional": true
+    }
   }
 }
