--- a/ui/link/package.json
+++ b/ui/link/package.json
@@ -14,7 +14,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/link"
+    "directory": "ui/link"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
