--- a/ui/link/package.json
+++ b/ui/link/package.json
@@ -35,6 +35,7 @@
     "@clutchd/component": "2.0.5"
   },
   "devDependencies": {
+    "@clutchd/bundlejs": "0.1.3",
     "@clutchd/jest": "1.0.2",
     "@clutchd/tsconfig": "1.2.0",
     "@clutchd/twx": "1.1.3",
