--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -16,6 +16,19 @@
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.mts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
+    }
+  },
+  "source": "./src/index.ts",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -23,6 +36,7 @@
     "dist"
   ],
   "scripts": {
+    "benchmark": "node src/clsx.benchmark.js",
     "build": "tsup src/index.ts --format esm,cjs --dts --minify",
     "dev": "tsup src/index.ts --format esm,cjs --watch --dts",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
@@ -35,6 +49,8 @@
     "@clutchd/tsconfig": "1.2.1",
     "@types/jest": "29.5.2",
     "@types/node": "20.3.2",
+    "benchmark": "2.1.4",
+    "clsx": "1.2.1",
     "jest": "29.5.0",
     "node-fetch": "2.6.1",
     "tsup": "7.1.0",
