--- a/packages/clsx/package.json
+++ b/packages/clsx/package.json
@@ -41,7 +41,8 @@
     "dev": "tsup src/index.ts --format esm,cjs --watch --dts",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "pnpm run build",
-    "test": "jest"
+    "test": "jest",
+    "validate": "pnpm run build && pnpm run benchmark && pnpm run test"
   },
   "devDependencies": {
     "@clutchd/bundlejs": "0.2.0",
