--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -19,9 +19,7 @@
   "type": "module",
   "exports": {
     "./base.json": "./base.json",
-    "./nextjs.json": "./nextjs.json",
-    "./library.json": "./library.json",
-    "./react-library.json": "./react-library.json"
+    "./nextjs.json": "./nextjs.json"
   },
   "types": "./dist/index.d.ts",
   "devDependencies": {
