--- a/packages/tooling/bundlejs/package.json
+++ b/packages/tooling/bundlejs/package.json
@@ -12,7 +12,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/bundlejs"
+    "directory": "packages/tooling/bundlejs"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
