--- a/packages/_unstable_/skeleton/package.json
+++ b/packages/_unstable_/skeleton/package.json
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/skeleton"
+    "directory": "packages/_unstable_/skeleton"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
