--- a/packages/_unstable_/avatar/package.json
+++ b/packages/_unstable_/avatar/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@clutchd/copyright",
-  "version": "2.2.0",
+  "name": "@clutchd/avatar",
+  "version": "3.1.0",
   "keywords": [
     "clutchd",
-    "copyright",
+    "avatar",
     "tailwind",
     "next"
   ],
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/copyright"
+    "directory": "packages/_unstable_/avatar"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -28,11 +28,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/component": "workspace:*",
-    "@clutchd/text": "workspace:*"
+    "@clutchd/component": "workspace:*"
   },
   "devDependencies": {
     "@clutchd/jest": "workspace:*",
+    "@clutchd/tailwind": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
