--- a/packages/_unstable_/block/package.json
+++ b/packages/_unstable_/block/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
+    "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.9.2",
