--- a/packages/utils/tailwind/package.json
+++ b/packages/utils/tailwind/package.json
@@ -16,10 +16,9 @@
   "author": "Clutchd, LLC",
   "sideEffects": false,
   "type": "module",
-  "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --format esm --dts --minify",
+    "build": "tsup src/index.ts --format esm --dts-only --minify",
     "dev": "tsup src/index.ts --format esm --dts --watch",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "pnpm run build",
