--- a/packages/utils/is-empty/package.json
+++ b/packages/utils/is-empty/package.json
@@ -20,8 +20,8 @@
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.tsx --format esm --dts --minify",
-    "dev": "tsup src/index.tsx --format esm --dts --watch",
+    "build": "tsup src/index.ts --format esm --dts --minify",
+    "dev": "tsup src/index.ts --format esm --dts --watch",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "pnpm run build",
     "test": "jest"
@@ -31,7 +31,6 @@
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@types/jest": "29.5.2",
-    "@types/node": "20.9.2",
     "jest": "29.6.1",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
