--- a/packages/primitives/copyright/package.json
+++ b/packages/primitives/copyright/package.json
@@ -3,9 +3,7 @@
   "version": "2.2.0",
   "keywords": [
     "clutchd",
-    "copyright",
-    "tailwind",
-    "next"
+    "copyright"
   ],
   "bugs": {
     "url": "https://github.com/clutchd/clutchd/issues"
@@ -28,25 +26,20 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/component": "workspace:*",
-    "@clutchd/text": "workspace:*"
+    "@clutchd/component": "workspace:*"
   },
   "devDependencies": {
+    "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@types/jest": "29.5.2",
-    "@types/node": "20.9.2",
     "@types/react": "18.2.47",
-    "@types/react-dom": "18.2.6",
     "jest": "29.6.1",
-    "next": "14.0.4",
-    "postcss": "8.4.31",
     "react": "18.2.0",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
   },
   "peerDependencies": {
-    "next": "^14",
     "react": "^18.2"
   }
 }
