--- a/packages/utils/clsx/package.json
+++ b/packages/utils/clsx/package.json
@@ -33,6 +33,7 @@
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@types/jest": "29.5.2",
+    "@types/node": "20.9.2",
     "clsx": "2.0.0",
     "jest": "29.6.1",
     "tsup": "7.2.0",
