--- a/packages/primitives/compose-props/package.json
+++ b/packages/primitives/compose-props/package.json
@@ -36,6 +36,7 @@
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@types/jest": "29.5.2",
+    "@types/node": "20.9.2",
     "jest": "29.6.1",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
