--- a/packages/primitives/compose-refs/package.json
+++ b/packages/primitives/compose-refs/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-compose-refs": "1.0.1",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
+    "@types/node": "20.9.2",
     "@types/react": "18.2.47",
     "jest": "29.6.1",
     "react": "18.2.0",
