--- a/packages/primitives/slot/package.json
+++ b/packages/primitives/slot/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-slot": "1.0.2",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
+    "@types/node": "20.9.2",
     "@types/react": "18.2.47",
     "jest": "29.6.1",
     "react": "18.2.0",
