--- a/packages/ui/components/avatar/package.json
+++ b/packages/ui/components/avatar/package.json
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/clutchd/clutchd",
-    "directory": "packages/_unstable_/avatar"
+    "directory": "packages/ui/components/avatar"
   },
   "author": "Clutchd, LLC",
   "sideEffects": false,
@@ -29,7 +29,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@clutchd/component": "workspace:*"
+    "@clutchd/component": "workspace:*",
+    "@clutchd/compose-props": "workspace:*",
+    "@clutchd/image": "workspace:*"
   },
   "devDependencies": {
     "@clutchd/jest": "workspace:*",
@@ -40,13 +42,13 @@
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.6",
     "jest": "29.6.1",
-    "next": "14.0.4",
+    "next": "14.1.0",
     "react": "18.2.0",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
   },
   "peerDependencies": {
-    "next": "^14",
+    "next": "^14.1",
     "react": "^18.2"
   }
 }
