--- a/packages/ui/layout/flex/package.json
+++ b/packages/ui/layout/flex/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
+    "@radix-ui/themes": "2.0.3",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
     "@types/react": "18.2.47",
