--- a/packages/utils/clsx/package.json
+++ b/packages/utils/clsx/package.json
@@ -17,13 +17,16 @@
   "author": "Clutchd, LLC",
   "sideEffects": false,
   "type": "module",
-  "exports": "./dist/index.js",
+  "exports": {
+    ".": "./dist/index.js",
+    "./lite": "./dist/lite.js"
+  },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "benchmark": "node ./benchmark/clsx.benchmark.js",
-    "build": "tsup src/index.ts --format esm --dts --minify",
-    "dev": "tsup src/index.ts --format esm --dts --watch",
+    "build": "tsup src/index.ts src/lite.ts --format esm --dts --minify",
+    "dev": "tsup src/index.ts src/lite.ts --format esm --dts --watch",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
     "prepublish": "pnpm run build",
     "test": "jest",
