--- a/packages/ui/core/component/package.json
+++ b/packages/ui/core/component/package.json
@@ -48,7 +48,7 @@
   },
   "peerDependencies": {
     "@clutchd/twx": "^4.0.0",
-    "react": "^18.2"
+    "react": "^18.0 || ^19.0"
   },
   "peerDependenciesMeta": {
     "@clutchd/twx": {
