--- a/packages/ui/core/slot/package.json
+++ b/packages/ui/core/slot/package.json
@@ -41,6 +41,7 @@
     "@types/jest": "29.5.12",
     "@types/node": "20.9.2",
     "@types/react": "18.2.47",
+    "@types/testing-library__jest-dom": "5.14.9",
     "jest": "29.7.0",
     "react": "18.2.0",
     "tsup": "8.1.0",
