--- a/packages/ui/core/component/package.json
+++ b/packages/ui/core/component/package.json
@@ -36,14 +36,14 @@
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@clutchd/twx": "workspace:*",
-    "@radix-ui/react-primitive": "1.0.3",
-    "@testing-library/react": "14.0.0",
+    "@radix-ui/react-primitive": "2.0.0",
+    "@testing-library/dom": "10.3.1",
+    "@testing-library/react": "16.0.0",
     "@types/jest": "29.5.12",
-    "@types/node": "20.9.2",
-    "@types/react": "18.2.47",
-    "@types/testing-library__jest-dom": "5.14.9",
+    "@types/node": "20.14.10",
+    "@types/react": "18.3.3",
     "jest": "29.7.0",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "tsup": "8.1.0",
     "typescript": "5.5.3"
   },
