--- a/packages/_unstable_/skeleton/package.json
+++ b/packages/_unstable_/skeleton/package.json
@@ -34,14 +34,15 @@
   "devDependencies": {
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@testing-library/react": "14.0.0",
+    "@testing-library/dom": "10.3.1",
+    "@testing-library/react": "16.0.0",
     "@types/jest": "29.5.12",
-    "@types/node": "20.9.2",
-    "@types/react": "18.2.47",
-    "@types/react-dom": "18.2.6",
+    "@types/node": "20.14.10",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "jest": "29.7.0",
     "next-auth": "4.24.6",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "tsup": "8.1.0",
     "typescript": "5.5.3"
   },
