--- a/packages/ui/components/navigator/package.json
+++ b/packages/ui/components/navigator/package.json
@@ -38,18 +38,19 @@
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@testing-library/react": "14.0.0",
+    "@testing-library/dom": "10.3.1",
+    "@testing-library/react": "16.0.0",
     "@types/jest": "29.5.12",
-    "@types/node": "20.9.2",
-    "@types/react": "18.2.47",
+    "@types/node": "20.14.10",
+    "@types/react": "18.3.3",
     "jest": "29.7.0",
-    "next": "14.1.1",
-    "react": "18.2.0",
+    "next": "14.2.5",
+    "react": "18.3.1",
     "tsup": "8.1.0",
     "typescript": "5.5.3"
   },
   "peerDependencies": {
-    "next": "^14.1",
-    "react": "^18.2"
+    "next": "^14.0",
+    "react": "^18.0 || ^19.0"
   }
 }
