--- a/packages/ui/primitives/image/package.json
+++ b/packages/ui/primitives/image/package.json
@@ -37,15 +37,15 @@
     "@clutchd/tailwind": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@types/jest": "29.5.12",
-    "@types/react": "18.2.47",
+    "@types/react": "18.3.3",
     "jest": "29.7.0",
-    "next": "14.1.1",
-    "react": "18.2.0",
+    "next": "14.2.5",
+    "react": "18.3.1",
     "tsup": "8.1.0",
     "typescript": "5.5.3"
   },
   "peerDependencies": {
-    "next": "^14.1",
-    "react": "^18.2"
+    "next": "^14.0",
+    "react": "^18.0 || ^19.0"
   }
 }
