--- a/packages/ui/primitives/label/package.json
+++ b/packages/ui/primitives/label/package.json
@@ -38,15 +38,15 @@
     "@clutchd/jest": "workspace:*",
     "@clutchd/tailwind": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-label": "2.1.0",
     "@types/jest": "29.5.12",
-    "@types/react": "18.2.47",
+    "@types/react": "18.3.3",
     "jest": "29.7.0",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "tsup": "8.1.0",
     "typescript": "5.5.3"
   },
   "peerDependencies": {
-    "react": "^18.2"
+    "react": "^18.0 || ^19.0"
   }
 }
