--- a/packages/ui/layout/flex/package.json
+++ b/packages/ui/layout/flex/package.json
@@ -36,16 +36,17 @@
   "devDependencies": {
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@radix-ui/themes": "2.0.3",
-    "@testing-library/react": "14.0.0",
+    "@radix-ui/themes": "3.1.1",
+    "@testing-library/dom": "10.3.1",
+    "@testing-library/react": "16.0.0",
     "@types/jest": "29.5.12",
-    "@types/react": "18.2.47",
+    "@types/react": "18.3.3",
     "jest": "29.7.0",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "tsup": "8.1.0",
     "typescript": "5.5.3"
   },
   "peerDependencies": {
-    "react": "^18.2"
+    "react": "^18.0 || ^19.0"
   }
 }
