--- a/packages/ui/layout/layout/package.json
+++ b/packages/ui/layout/layout/package.json
@@ -38,14 +38,14 @@
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@types/jest": "29.5.12",
-    "@types/react": "18.2.47",
-    "@types/react-dom": "18.2.6",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "jest": "29.7.0",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "tsup": "8.1.0",
     "typescript": "5.5.3"
   },
   "peerDependencies": {
-    "react": "^18.2"
+    "react": "^18.0 || ^19.0"
   }
 }
