--- a/packages/ui/core/compose-props/package.json
+++ b/packages/ui/core/compose-props/package.json
@@ -35,11 +35,14 @@
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-slot": "1.1.0",
     "@types/jest": "29.5.12",
-    "@types/node": "20.9.2",
+    "@types/node": "20.14.10",
     "jest": "29.7.0",
     "tsup": "8.1.0",
     "typescript": "5.5.3"
+  },
+  "peerDependencies": {
+    "react": "^18.0 || ^19.0"
   }
 }
