--- a/packages/ui/core/compose-refs/package.json
+++ b/packages/ui/core/compose-refs/package.json
@@ -33,16 +33,17 @@
     "@clutchd/jest": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@radix-ui/react-compose-refs": "1.0.1",
-    "@testing-library/react": "14.0.0",
+    "@testing-library/dom": "10.3.1",
+    "@testing-library/react": "16.0.0",
     "@types/jest": "29.5.12",
-    "@types/node": "20.9.2",
-    "@types/react": "18.2.47",
+    "@types/node": "20.14.10",
+    "@types/react": "18.3.3",
     "jest": "29.7.0",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "tsup": "8.1.0",
     "typescript": "5.5.3"
   },
   "peerDependencies": {
-    "react": "^18.2"
+    "react": "^18.0 || ^19.0"
   }
 }
