--- a/packages/_unstable_/input/package.json
+++ b/packages/_unstable_/input/package.json
@@ -51,7 +51,7 @@
     "typescript": "5.5.3"
   },
   "peerDependencies": {
-    "next": "^14.1",
-    "react": "^18.2"
+    "next": "^14.0",
+    "react": "^18.0 || ^19.0"
   }
 }
