--- a/packages/_unstable_/protect/package.json
+++ b/packages/_unstable_/protect/package.json
@@ -43,8 +43,8 @@
     "typescript": "5.5.3"
   },
   "peerDependencies": {
-    "next": "^14.1",
+    "next": "^14.0",
     "next-auth": "^4.24",
-    "react": "^18.2"
+    "react": "^18.0 || ^19.0"
   }
 }
