--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -35,15 +35,15 @@
   "devDependencies": {
     "@clutchd/tailwind": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@types/node": "22.1.0",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "next": "14.2.5",
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "next": "15.0.3",
     "react": "18.3.1",
-    "tsup": "8.1.0"
+    "tsup": "8.3.5"
   },
   "peerDependencies": {
-    "next": "^14.0",
+    "next": "^14.0 || ^15.0",
     "react": "^18.0 || ^19.0"
   }
 }
