--- a/packages/compose-props/package.json
+++ b/packages/compose-props/package.json
@@ -34,8 +34,7 @@
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
     "@radix-ui/react-slot": "1.1.0",
-    "@types/node": "22.1.0",
-    "tsup": "8.1.0",
-    "typescript": "5.5.3"
+    "@types/node": "22.9.0",
+    "tsup": "8.3.5"
   }
 }
