--- a/packages/flex/package.json
+++ b/packages/flex/package.json
@@ -36,13 +36,12 @@
   "devDependencies": {
     "@clutchd/tsconfig": "workspace:*",
     "@radix-ui/themes": "3.1.1",
-    "@testing-library/dom": "10.3.1",
-    "@testing-library/jest-dom": "6.4.8",
-    "@testing-library/react": "16.0.0",
-    "@types/react": "18.3.3",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.0.1",
+    "@types/react": "18.3.12",
     "react": "18.3.1",
-    "tsup": "8.1.0",
-    "typescript": "5.5.3"
+    "tsup": "8.3.5"
   },
   "peerDependencies": {
     "react": "^18.0 || ^19.0"
