--- a/packages/image/package.json
+++ b/packages/image/package.json
@@ -33,14 +33,14 @@
   },
   "devDependencies": {
     "@clutchd/tsconfig": "workspace:*",
-    "@types/react": "18.3.3",
+    "@types/react": "18.3.12",
     "jest": "29.7.0",
-    "next": "14.2.5",
+    "next": "15.0.3",
     "react": "18.3.1",
-    "tsup": "8.1.0"
+    "tsup": "8.3.5"
   },
   "peerDependencies": {
-    "next": "^14.0",
+    "next": "^14.0 || ^15.0",
     "react": "^18.0 || ^19.0"
   }
 }
