--- a/packages/label/package.json
+++ b/packages/label/package.json
@@ -36,10 +36,9 @@
   "devDependencies": {
     "@clutchd/tsconfig": "workspace:*",
     "@radix-ui/react-label": "2.1.0",
-    "@types/react": "18.3.3",
+    "@types/react": "18.3.12",
     "react": "18.3.1",
-    "tsup": "8.1.0",
-    "typescript": "5.5.3"
+    "tsup": "8.3.5"
   },
   "peerDependencies": {
     "react": "^18.0 || ^19.0"
