--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -36,12 +36,11 @@
   },
   "devDependencies": {
     "@clutchd/tsconfig": "workspace:*",
-    "@testing-library/react": "16.0.0",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
+    "@testing-library/react": "16.0.1",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
     "react": "18.3.1",
-    "tsup": "8.1.0",
-    "typescript": "5.5.3"
+    "tsup": "8.3.5"
   },
   "peerDependencies": {
     "react": "^18.0 || ^19.0"
