--- a/packages/link/package.json
+++ b/packages/link/package.json
@@ -35,17 +35,17 @@
   "devDependencies": {
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@testing-library/dom": "10.3.1",
-    "@testing-library/jest-dom": "6.4.8",
-    "@testing-library/react": "16.0.0",
-    "@types/node": "22.1.0",
-    "@types/react": "18.3.3",
-    "next": "14.2.5",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.0.1",
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
+    "next": "15.0.3",
     "react": "18.3.1",
-    "tsup": "8.1.0"
+    "tsup": "8.3.5"
   },
   "peerDependencies": {
-    "next": "^14.0",
+    "next": "^14.0 || ^15.0",
     "react": "^18.0 || ^19.0"
   }
 }
