--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,18 +23,17 @@
     "@clutchd/layout": "workspace:*",
     "@clutchd/link": "workspace:*",
     "@clutchd/twx": "workspace:*",
-    "next": "14.2.5",
+    "next": "15.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@clutchd/tsconfig": "workspace:*",
-    "@types/node": "22.1.0",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.14",
-    "postcss": "8.4.31",
-    "tailwindcss": "3.4.11",
-    "typescript": "5.5.3"
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.49",
+    "tailwindcss": "3.4.14"
   }
 }
