--- a/packages/block/package.json
+++ b/packages/block/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@clutchd/tsconfig": "workspace:*",
+    "@happy-dom/global-registrator": "15.11.3",
     "@radix-ui/themes": "3.1.1",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
