--- a/packages/compose-refs/package.json
+++ b/packages/compose-refs/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
+    "@happy-dom/global-registrator": "15.11.3",
     "@radix-ui/react-compose-refs": "1.1.0",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.0.1",
