--- a/packages/divider/package.json
+++ b/packages/divider/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@clutchd/tsconfig": "workspace:*",
+    "@happy-dom/global-registrator": "15.11.3",
     "@radix-ui/react-separator": "1.1.0",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
