--- a/packages/copyright/package.json
+++ b/packages/copyright/package.json
@@ -25,15 +25,15 @@
   "devDependencies": {
     "@clutchd/bundlejs": "workspace:*",
     "@clutchd/tsconfig": "workspace:*",
-    "@happy-dom/global-registrator": "15.11.3",
+    "@happy-dom/global-registrator": "15.11.7",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/react": "16.0.1",
-    "@types/react": "18.3.12",
-    "react": "18.3.1",
+    "@testing-library/react": "16.1.0",
+    "@types/react": "19.0.2",
+    "react": "19.0.0",
     "tsup": "8.3.5"
   },
   "peerDependencies": {
-    "react": "^18.0 || ^19.0"
+    "react": "^19.0"
   }
 }
