--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,28 +12,22 @@
   },
   "dependencies": {
     "@clutchd/avatar": "workspace:*",
-    "@clutchd/block": "workspace:*",
-    "@clutchd/component": "workspace:*",
-    "@clutchd/compose-props": "workspace:*",
     "@clutchd/copyright": "workspace:*",
-    "@clutchd/divider": "workspace:*",
-    "@clutchd/flex": "workspace:*",
-    "@clutchd/grid": "workspace:*",
-    "@clutchd/label": "workspace:*",
     "@clutchd/layout": "workspace:*",
-    "@clutchd/link": "workspace:*",
     "@clutchd/twx": "workspace:*",
-    "next": "15.0.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "@radix-ui/react-primitive": "2.0.1",
+    "@radix-ui/react-separator": "1.1.1",
+    "next": "15.1.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@clutchd/tsconfig": "workspace:*",
-    "@types/node": "22.9.0",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
+    "@types/node": "22.10.2",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
     "autoprefixer": "10.4.20",
     "postcss": "8.4.49",
-    "tailwindcss": "3.4.15"
+    "tailwindcss": "3.4.17"
   }
 }
